--- a/public/css/preloader.css
+++ b/public/css/preloader.css
@@ -11,3 +11,11 @@
 #loader{
     width: 100px;
 }
+.blink_me {
+    animation: blinker 1s linear infinite;
+}
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
+}
